--- a/.github/workflows/01-manual-trigger-job.yaml
+++ b/.github/workflows/01-manual-trigger-job.yaml
@@ -1,1 +1,21 @@
 
+name: Manually trigger an Azure Machine Learning job
+
+on: 
+  workflow_dispatch:
+
+jobs:
+  train:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Check out repo
+      uses: actions/checkout@main
+    - name: Install az ml extension
+      run: az extension add -n ml -y
+    - name: Azure login
+      uses: azure/login@v1
+      with:
+        creds: ${{secrets.AZURE_CREDENTIALS}}
+    - name: run ml job
+      run: az ml job create --file job.yaml --resource-group cal-3444-bee --workspace-name mlw413c
+      working-directory: src
