--- a/.github/workflows/01-manual-trigger-job.yaml
+++ b/.github/workflows/01-manual-trigger-job.yaml
@@ -1,9 +1,19 @@
 
 name: Manually trigger an Azure Machine Learning job
+  
+on: [push]
 
-on: 
-  workflow_dispatch:
+name: Azure Login Sample
 
+jobs:
+  build-and-deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Log in with Azure
+        uses: azure/login@v1
+        with:
+          creds: '${{secrets.AZURE_CREDENTIALS}}'
+          
 jobs:
   train:
     runs-on: ubuntu-latest
