--- a/.github/workflows/01-manual-trigger-job.yaml
+++ b/.github/workflows/01-manual-trigger-job.yaml
@@ -1,8 +1,10 @@
 
 name: Manually trigger an Azure Machine Learning job
+
+on: 
+  workflow_dispatch:
   
 on: [push]
-
 name: Azure Login Sample
 
 jobs:
