--- a/.github/workflows/01-manual-trigger-job.yaml
+++ b/.github/workflows/01-manual-trigger-job.yaml
@@ -1,8 +1,7 @@
 
 name: Manually trigger an Azure Machine Learning job
 
-on: 
-  workflow_dispatch:
+on: workflow_dispatch
           
 jobs:
   train:
