--- a/src/job.yaml
+++ b/src/job.yaml
@@ -8,6 +8,6 @@ inputs:
     path: azureml:nyc-taxi-data:1
     mode: ro_mount  
 environment: azureml:AzureML-sklearn-0.24-ubuntu18.04-py37-cpu@latest
-compute: cpu-cluster
+compute: cluster20230710T094114Z
 experiment_name: nyc-taxi-fare-prices
 description: Train a classification model on nyc taxi data to predict taxi fare prices.
