--- a/.github/workflows/05_model-deployment.yaml
+++ b/.github/workflows/05_model-deployment.yaml
@@ -18,7 +18,7 @@ jobs:
       - name: set current directory
         run: cd src
       - name: Create endpoint
-        run: az ml online-endpoint create --name price-prediction-ep -f src/create-endpoint.yaml cal-3658-7ab --workspace-name mlwa0d8
+        run: az ml online-endpoint create --name price-prediction-ep -f src/create-endpoint.yaml --resource-group cal-3658-7ab --workspace-name mlwa0d8
   deploy:
     name: deploy model
     needs: create
@@ -35,4 +35,4 @@ jobs:
       - name: set current directory
         run: cd src
       - name: deploy model
-        run: az ml online-deployment create --name mlflow-deployment --endpoint price-prediction-ep -f src/mlflow-deployment.yaml cal-3658-7ab --workspace-name mlwa0d8 --all-traffic
+        run: az ml online-deployment create --name mlflow-deployment --endpoint price-prediction-ep -f src/mlflow-deployment.yaml --resource-group cal-3658-7ab --workspace-name mlwa0d8 --all-traffic
